Fix thread safety of g_get_language_names()

https://bugzilla.gnome.org/show_bug.cgi?id=748474